# api/urls.py
@@ -9,9 +9,8 @@ router.register("surveys", views.SurveyViewSet)
 urlpatterns = [
     # Base API
     path("", include(router.urls)),
-    # Knox
-    path("login/", views.LoginView.as_view(), name="knox_login"),
-    path("logout/", views.LogoutView.as_view(), name="knox_logout"),
-    # TODO: remove probably
-    path("api-auth/", include("rest_framework.urls")),
+    # Auth
+    path("login/", views.LoginView.as_view()),
+    path("logout/", views.LogoutView.as_view()),
+    path("session/", views.SessionView.as_view()),
 ]
