# openapi.yaml
@@ -8,46 +8,60 @@ paths:
     post:
       operationId: api_login_create
       tags:
-        - api
+      - api
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AuthToken'
+              $ref: '#/components/schemas/User'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/AuthToken'
+              $ref: '#/components/schemas/User'
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/AuthToken'
+              $ref: '#/components/schemas/User'
         required: true
       security:
-        - knoxApiToken: [ ]
-        - { }
+      - cookieAuth: []
+      - {}
       responses:
         '200':
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AuthToken'
+                $ref: '#/components/schemas/User'
           description: ''
   /api/logout/:
     post:
       operationId: api_logout_create
       tags:
-        - api
+      - api
       security:
-        - knoxApiToken: [ ]
+      - cookieAuth: []
       responses:
         '200':
           description: No response body
+  /api/session/:
+    get:
+      operationId: api_session_retrieve
+      tags:
+      - api
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Session'
+          description: ''
   /api/surveys/:
     get:
       operationId: api_surveys_list
       tags:
-        - api
+      - api
       security:
-        - knoxApiToken: [ ]
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -60,7 +74,7 @@ paths:
     post:
       operationId: api_surveys_create
       tags:
-        - api
+      - api
       requestBody:
         content:
           application/json:
@@ -74,7 +88,7 @@ paths:
               $ref: '#/components/schemas/Survey'
         required: true
       security:
-        - knoxApiToken: [ ]
+      - cookieAuth: []
       responses:
         '201':
           content:
@@ -86,16 +100,16 @@ paths:
     get:
       operationId: api_surveys_retrieve
       parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          description: A unique integer value identifying this survey.
-          required: true
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: A unique integer value identifying this survey.
+        required: true
       tags:
-        - api
+      - api
       security:
-        - knoxApiToken: [ ]
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -106,33 +120,28 @@ paths:
     delete:
       operationId: api_surveys_destroy
       parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          description: A unique integer value identifying this survey.
-          required: true
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: A unique integer value identifying this survey.
+        required: true
       tags:
-        - api
+      - api
       security:
-        - knoxApiToken: [ ]
+      - cookieAuth: []
       responses:
         '204':
           description: No response body
 components:
   schemas:
-    AuthToken:
+    Session:
       type: object
       properties:
         username:
           type: string
-          writeOnly: true
-        password:
-          type: string
-          writeOnly: true
       required:
-        - password
-        - username
+      - username
     Survey:
       type: object
       properties:
@@ -172,18 +181,29 @@ components:
           format: date-time
           readOnly: true
       required:
-        - created
-        - description
-        - email
-        - id
-        - name
-        - phone_number
-        - point_of_contact
-        - systems
-        - url
+      - created
+      - description
+      - email
+      - id
+      - name
+      - phone_number
+      - point_of_contact
+      - systems
+      - url
+    User:
+      type: object
+      properties:
+        username:
+          type: string
+          writeOnly: true
+        password:
+          type: string
+          writeOnly: true
+      required:
+      - password
+      - username
   securitySchemes:
-    knoxApiToken:
+    cookieAuth:
       type: apiKey
-      in: header
-      name: Authorization
-      description: Token-based authentication with required prefix "Token"
+      in: cookie
+      name: sessionid
